# CapicityNew

./: Blueprint.cpp  Blueprint.h  Building.cpp  Building.h  CMakeLists.txt  CapicityMain.cpp  CapicitySim.cpp  CapicitySim.h  FunktorVergleich.cpp  FunktorVergleich.h  Holz.cpp  Holz.h  Kunststoff.cpp  Kunststoff.h  Leer.cpp  Leer.h  Material.cpp  Material.h  Metall.cpp  Metall.h  README.md  Solarpanel.cpp  Solarpanel.h  Wasserkraftwerk.cpp  Wasserkraftwerk.h  Windkraftwerk.cpp  Windkraftwerk.h  main.cpp
